# mq-bridge-mcp

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  claude.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
config/: http_file_file.yml  schema.json  stdio_file_file.yml
config/docker-compose/: aws.yml  kafka.yml  mongodb-replica.yml  mongodb.yml  mosquitto_persistence.conf  nats.yml
src/: configuration.rs  consumer_registry.rs  main.rs  publisher_registry.rs  server.rs  tools.rs
tests/: integration_tests.rs
tests/docker-compose/: amqp.yml  ibm_mq.yml  mongodb.yml  mq_init.mqsc  mqtt.yml  postgres.yml
