[package]
name = "mq-bridge-mcp"
version = "0.1.0"
edition = "2024"
authors = ["Marco Mengelkoch"]
license = "MIT"
description = "MCP Server for mq-bridge"

[dependencies]
mq-bridge = { version="0.2.9", features = ["schema"] }
config = { version = "0.15.21", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.2.1"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "signal", "tracing", "sync"] }
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }

rmcp = { version = "1.2.0", features = ["server", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-io", "server-side-http"] }
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rustls = "0.23.37"
rustls-pemfile = "2.2.0"

rdkafka = { version = "0.38.0", features = ["tokio"], optional = true }

[dev-dependencies]
fast-uuid-v7 = "0.1.3"

[features]
default = ["full"]
full = ["mq-bridge/full"]
ibm-mq = ["mq-bridge/ibm-mq"]
arm64-cross-compile = ["rdkafka", "rdkafka/cmake-build"]
middleware = ["mq-bridge/middleware"]
mongodb = ["mq-bridge/mongodb"]
http = ["mq-bridge/http"]
kafka = ["mq-bridge/kafka"]
aws = ["mq-bridge/aws"]
nats = ["mq-bridge/nats"]
mqtt = ["mq-bridge/mqtt"]
zeromq = ["mq-bridge/zeromq"]
sled = ["mq-bridge/sled"]
grpc = ["mq-bridge/grpc"]
amqp = ["mq-bridge/amqp"]